Se agregan referencias al DOM de imputs gestionados por el usuario

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                                         type="text"
                                         class="form-control mb-2 mr-sm-2"
                                         placeholder="Description"
+                                        id="description"
                                     />
                                 </div>
                                 <div class="col">
@@ -63,6 +64,7 @@
                                         min="0"
                                         class="form-control mb-2 mr-sm-2"
                                         placeholder="Calories"
+                                        id="calories"
                                     />
                                 </div>
                                 <div class="col">
@@ -71,6 +73,7 @@
                                         min="0"
                                         class="form-control mb-2 mr-sm-2"
                                         placeholder="Carbs"
+                                        id="carbs"
                                     />
                                 </div>
                                 <div class="col">
@@ -79,6 +82,7 @@
                                         min="0"
                                         class="form-control mb-2 mr-sm-2"
                                         placeholder="Protein"
+                                        id="protein"
                                     />
                                 </div>
                                 <div class="col">
