--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                                     />
                                 </div>
                                 <div class="col">
-                                    <button class="btn btn-primary mb-2">
+                                    <button
+                                        class="btn btn-primary mb-2"
+                                        onclick="validateInputs()"
+                                    >
                                         <i class="fas fa-plus"></i>
                                     </button>
                                 </div>
